--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,17 +1,134 @@
+.searchBarSection {
+  background-image: url('/images/water_background.png');
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  height: 100vh;
+}
+
+.logo {
+  text-align: center;
+  margin: 0 2em;
+}
+
+.logoImgWrap {
+  font-size: 36px;
+}
+
+.logoImg {
+  height: auto;
+  width: 100%;
+  max-width: 10em;
+}
+
+.logoSubtitle {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 4px;
+  text-shadow: 0 2px 3px #c3c2c245;
+  margin-bottom: 33px;
+}
+
+.introContainer {
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 8px;
+  max-width: 85%;
+}
+
+.introTitle {
+  font-size: 16px;
+  text-shadow: 1px 3px 5px #6f6e6e0f;
+}
+
+.counterContainer {
+  margin: 33px auto;
+  text-align: center;
+}
+
+.odometer {
+  color: var(--elliotPrimary);
+  font-size: 20px;
+  letter-spacing: 0.3em;
+  font-family: var(--fontCommon);
+  font-weight: 700;
+}
+
+.counterText {
+  color: #868383d4;
+  font-size: 12px;
+}
+
 .searchWrap {
   max-width: 90%;
   margin: 33px auto;
   font-size: 1.2em;
 }
 
+.cta {
+  margin-top: 20px;
+}
+
+.video {
+  width: 100%;
+  height: 100%;
+  margin-bottom: -5px;
+}
+
 @media (min-width: 400px) {
+  .logoSubtitle {
+    font-size: 14px;
+  }
+
+  .introTitle {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 1.4em;
+  }
+
   .searchWrap {
     max-width: 80%;
   }
 }
 
 @media (min-width: 768px) {
+  .logoSubtitle {
+    font-size: 17px;
+  }
+
+  .introContainer {
+    margin-bottom: 14px;
+    max-width: 70%;
+  }
+
+  .introTitle {
+    font-size: 30px;
+  }
+
+  .counterContainer {
+    margin: 44px 0 22px;
+  }
+
+  .odometer {
+    font-size: 26px;
+  }
+
+  .counterText {
+    font-size: 16px;
+  }
+
   .searchWrap {
     max-width: 42em;
+  }
+
+  .cta {
+    margin-top: 20px;
+  }
+}
+
+@media (min-width: 900px) {
+  .introContainer {
+    max-width: 55%;
   }
 }
