--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,10 +1,10 @@
-.searchBarSection {
+/* .searchBarSection {
   background-image: url('/images/water_background.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
-  height: 100vh;
-}
+  height: 100vh; 
+} */
 
 .logo {
   text-align: center;
@@ -30,14 +30,14 @@
   margin-bottom: 33px;
 }
 
-.introContainer {
+.ctaContainer {
   text-align: center;
   margin: 0 auto;
   margin-bottom: 8px;
   max-width: 85%;
 }
 
-.introTitle {
+.ctaTitle {
   font-size: 16px;
   text-shadow: 1px 3px 5px #6f6e6e0f;
 }
@@ -70,10 +70,103 @@
   margin-top: 20px;
 }
 
+.showMoreContainer {
+  font-size: 2em;
+  padding-top: 23px;
+  color: var(--elliotSecondary);
+}
+
+.introContainer {
+  margin-top: 50px;
+  position: relative;
+}
+
+.introBox {
+  /* border: 1px solid #282828;
+  background: #282828;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); */
+  border: 1px solid #f4f4f4;
+  background: #f4f4f4;
+  box-shadow: 0 1px 3px rgba(166, 161, 161, 0.5);
+  max-width: 80%;
+  margin: 0 auto;
+  color: var(--textColor);
+  border-top-right-radius: 16px;
+  border-top-left-radius: 16px;
+  position: relative;
+  z-index: var(--zindex10);
+  text-align: center;
+  padding: 2px;
+}
+
+.introContainer::after {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: var(--elliotSecondary);
+  width: 100vw;
+  content: ' ';
+  height: calc(100% - 180px);
+  z-index: -1;
+}
+
+.introTitle {
+  font-size: 3.5vw;
+  padding: 60px 20px 0;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.introDescription {
+  font-size: 2vw;
+  margin: 60px 0 40px;
+}
+
 .video {
   width: 100%;
   height: 100%;
   margin-bottom: -5px;
+  z-index: 10;
+}
+
+.waveBackground {
+  position: absolute;
+  bottom: 170px;
+}
+
+.sections {
+  padding: 100px 0;
+  text-align: center;
+  color: var(--textColor);
+}
+
+.sections h2 {
+  font-size: 2.8vw;
+}
+
+.bgBlue {
+  background-color: var(--elliotSecondary);
+  color: white;
+}
+
+.bgGrey {
+  background-color: #f7f7f7;
+}
+
+.centerBox {
+  padding: 0 20px;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.howItWorks {
+  color: white;
+}
+
+.howItWorks :global(.divider) {
+  background: white;
 }
 
 @media (min-width: 400px) {
@@ -81,7 +174,7 @@
     font-size: 14px;
   }
 
-  .introTitle {
+  .ctaTitle {
     margin-top: 0;
     margin-bottom: 10px;
     font-size: 1.4em;
@@ -97,12 +190,12 @@
     font-size: 17px;
   }
 
-  .introContainer {
+  .ctaContainer {
     margin-bottom: 14px;
     max-width: 70%;
   }
 
-  .introTitle {
+  .ctaTitle {
     font-size: 30px;
   }
 
@@ -128,7 +221,7 @@
 }
 
 @media (min-width: 900px) {
-  .introContainer {
+  .ctaContainer {
     max-width: 55%;
   }
 }
