--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -169,6 +169,15 @@
   background: white;
 }
 
+.cardWrap {
+  margin: 0 auto;
+  max-width: 350px;
+}
+
+.cardWrap :global(div) {
+  margin-bottom: 20px;
+}
+
 @media (min-width: 400px) {
   .logoSubtitle {
     font-size: 14px;
@@ -217,6 +226,18 @@
 
   .cta {
     margin-top: 20px;
+  }
+
+  .cardWrap {
+    margin: auto;
+    max-width: 1100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .cardWrap :global(div) {
+    margin-bottom: 0;
   }
 }
 
