--- a/pages/why-water.module.css
+++ b/pages/why-water.module.css
@@ -11,6 +11,16 @@
   box-sizing: content-box;
 }
 
+.layer1 {
+  display: flex;
+  flex-direction: column;
+  max-width: none;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: -100px;
+}
+
 .layer2 {
   background: #dfc8b3;
 }
@@ -284,12 +294,9 @@
     margin-top: -15%;
   }
 
-  .title {
-    margin-bottom: 25px;
-  }
-
+  .title,
   .subtitle {
-    margin-bottom: 23px;
+    margin: 0 0 25px 0;
   }
 
   .wellBottom {
@@ -298,7 +305,6 @@
 }
 
 @media (min-width: 768px) {
-  .layer1,
   .layer2,
   .layer3,
   .layer4,
@@ -468,6 +474,13 @@
 @media (min-height: 1080px) {
   .wellLastBit {
     height: 85%;
+  }
+}
+
+@media screen and (max-height: 700px){
+  .layer1 {
+    margin-top: 0;
+    min-height: 500px;
   }
 }
 
