--- a/components/HeaderHome/HeaderHome.module.css
+++ b/components/HeaderHome/HeaderHome.module.css
@@ -9,7 +9,7 @@
 .headerRight {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   margin: 1em;
 }
