--- a/components/Buttons/ButtonPrimary/ButtonPrimary.module.css
+++ b/components/Buttons/ButtonPrimary/ButtonPrimary.module.css
@@ -7,6 +7,8 @@
     var(--elliotSecondary) 100%
   );
   box-shadow: 1px 1px 8px rgba(225, 215, 215, 0.24);
+
+  /* background-color: var(--secondaryTest); */
   color: white;
   border-radius: 10px;
   transition: 0.5s;
@@ -15,13 +17,9 @@
   text-transform: uppercase;
 }
 
-.big {
-  border-radius: 15px;
-}
-
-.primary:hover {
-  background-position: right center;
-}
+/* .primary:hover {
+  background-position: right center; 
+} */
 
 .primary button {
   color: white;
