--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -1,14 +1,30 @@
 .container {
   box-sizing: border-box;
   width: 332px;
-  min-height: 322px;
+  min-height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 12px;
-  padding: 24px;
+  padding: 30px;
   background-color: #fff;
   border-radius: 18px;
   box-shadow: 0 10px 16px -8px rgb(0 0 0 / 20%);
   color: var(--textColor);
+}
+
+.imgWrapper {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 1px solid #f4f1f1;
+  box-shadow: 0 10px 16px -8px rgb(0 0 0 / 20%);
+  margin-bottom: 20px;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
 }
