--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,10 +1,13 @@
-/* .searchBarSection {
-  background-image: url('/images/water_background.png');
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-size: cover;
-  height: 100vh; 
-} */
+.sections {
+  padding: 100px 0;
+  text-align: center;
+  color: var(--textColor);
+  min-height: 500px;
+}
+
+.sections h2 {
+  font-size: 1.8vw;
+}
 
 .logo {
   text-align: center;
@@ -38,6 +41,7 @@
 }
 
 .ctaTitle {
+  color: var(--textColor);
   font-size: 16px;
   text-shadow: 1px 3px 5px #6f6e6e0f;
 }
@@ -48,7 +52,7 @@
 }
 
 .odometer {
-  color: var(--elliotPrimary);
+  color: #00458b;
   font-size: 20px;
   letter-spacing: 0.3em;
   font-family: var(--fontCommon);
@@ -73,86 +77,75 @@
 .showMoreContainer {
   font-size: 2em;
   padding-top: 23px;
-  color: var(--elliotSecondary);
+  color: var(--ctaTest);
+  position: relative;
+}
+
+.waveSection {
+  position: relative;
+  margin-top: 20%;
 }
 
 .introContainer {
-  margin-top: 50px;
+  margin-top: 0;
   position: relative;
+  background: var(--primaryDarkerTest);
+  padding: 50px 0 100px;
+  color: white;
+}
+
+.svgDiagonal {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
 }
 
 .introBox {
-  /* border: 1px solid #282828;
-  background: #282828;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); */
-  border: 1px solid #f4f4f4;
-  background: #f4f4f4;
-  box-shadow: 0 1px 3px rgba(166, 161, 161, 0.5);
-  max-width: 80%;
   margin: 0 auto;
-  color: var(--textColor);
-  border-top-right-radius: 16px;
-  border-top-left-radius: 16px;
-  position: relative;
-  z-index: var(--zindex10);
-  text-align: center;
-  padding: 2px;
+  max-width: 80%;
+  padding-bottom: 150px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.introContainer::after {
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: var(--elliotSecondary);
-  width: 100vw;
-  content: ' ';
-  height: calc(100% - 180px);
-  z-index: -1;
+.introText {
+  width: 40%;
 }
 
 .introTitle {
-  font-size: 3.5vw;
-  padding: 60px 20px 0;
-  max-width: 600px;
-  margin: 0 auto;
+  font-size: 2.8vw;
 }
 
 .introDescription {
-  font-size: 2vw;
-  margin: 60px 0 40px;
-}
-
-.video {
-  width: 100%;
-  height: 100%;
-  margin-bottom: -5px;
-  z-index: 10;
+  font-size: 1.8vw;
 }
 
 .waveBackground {
   position: absolute;
-  bottom: 170px;
+  bottom: 90%;
+  z-index: -1;
 }
 
-.sections {
-  padding: 100px 0;
-  text-align: center;
-  color: var(--textColor);
+.videoSection {
+  background-color: var(--lightgreyTest);
+  position: relative;
+  min-height: 740px;
 }
 
-.sections h2 {
-  font-size: 2.8vw;
-}
-
-.bgBlue {
-  background-color: var(--elliotSecondary);
-  color: white;
+.video {
+  width: 100%;
+  position: absolute;
+  top: 10px;
+  right: -40px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  box-shadow: -8px 5px 22px 0 #b3adaa;
+  transform: perspective(1500px) rotateY(-8deg) scale(0.9);
 }
 
 .bgGrey {
-  background-color: #f7f7f7;
+  background-color: var(--lightgreyTest);
 }
 
 .centerBox {
@@ -162,11 +155,31 @@
 }
 
 .howItWorks {
-  color: white;
+  padding-top: 100px;
+  padding-bottom: 150px;
+  background-color: white;
+  position: relative;
+  text-align: left;
+}
+
+h2.howItWorksTitle {
+  font-size: 2.8vw;
+  text-align: center;
+}
+
+.howItWorksDescription {
+  padding-bottom: 80px;
+  text-align: center;
 }
 
 .howItWorks :global(.divider) {
   background: white;
+  margin-bottom: 100px;
+}
+
+.howItWorksBg {
+  width: 100%;
+  padding-top: 150px;
 }
 
 .cardWrap {
@@ -174,8 +187,17 @@
   max-width: 350px;
 }
 
-.cardWrap :global(div) {
+.cardWrap :global(> div) {
   margin-bottom: 20px;
+}
+
+.waterGoal {
+  /*  background-color: var(--primaryDarkerTest); */
+}
+
+.newsletterSection {
+  background-color: var(--secondaryTest);
+  color: white;
 }
 
 @media (min-width: 400px) {
@@ -236,7 +258,7 @@
     justify-content: space-between;
   }
 
-  .cardWrap :global(div) {
+  .cardWrap :global(> div) {
     margin-bottom: 0;
   }
 }
