--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -2,6 +2,7 @@
   background-color: white;
   display: flex;
   justify-content: space-between;
+  padding-bottom: 20px;
 }
 
 .navWrap {
@@ -29,7 +30,6 @@
   margin: 0;
   width: 100%;
   font-size: 1.3em;
-  margin-bottom: 1em;
 }
 
 .wrapper {
