--- a/components/Forms/Contact/ContactForm.module.css
+++ b/components/Forms/Contact/ContactForm.module.css
@@ -1,7 +1,7 @@
 .formInput {
   border-radius: 12px;
   border-style: hidden;
-  background-color: #fff;
+  background-color: white;
   box-shadow: -1px 1px 5px -1px rgba(1, 1, 1, 0.2);
   height: 34px;
   padding: 6px 12px;
