--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -12,7 +12,7 @@
   max-width: 500px;
   margin: 100px auto;
   background: white;
-  border: 1px solid var(--placeholder);
+  border: 1px solid var(--dimGrey);
   border-radius: 6px;
   transition: 1.1s ease-out;
   box-shadow: -2rem 2rem 2rem rgba(black, 0.2);
