--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,12 +1,37 @@
 .sections {
+  position: relative;
   padding: 100px 0;
   text-align: center;
   color: var(--textColor);
-  min-height: 500px;
 }
 
 .sections h2 {
   font-size: 1.8vw;
+}
+
+.bgGrey {
+  background-color: var(--lightAzureBackground);
+}
+
+.centerBox {
+  padding: 0 20px;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.svgDiagonal {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+}
+
+.searchBarSection {
+  background-image: url('/images/water_background.png');
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  height: 100vh;
 }
 
 .logo {
@@ -33,6 +58,12 @@
   margin-bottom: 33px;
 }
 
+.searchWrap {
+  max-width: 90%;
+  margin: 33px auto;
+  font-size: 1.2em;
+}
+
 .ctaContainer {
   text-align: center;
   margin: 0 auto;
@@ -51,23 +82,9 @@
   text-align: center;
 }
 
-.odometer {
-  color: #00458b;
-  font-size: 20px;
-  letter-spacing: 0.3em;
-  font-family: var(--fontCommon);
-  font-weight: 700;
-}
-
 .counterText {
-  color: #868383d4;
+  color: var(--dimGrey);
   font-size: 12px;
-}
-
-.searchWrap {
-  max-width: 90%;
-  margin: 33px auto;
-  font-size: 1.2em;
 }
 
 .cta {
@@ -77,35 +94,20 @@
 .showMoreContainer {
   font-size: 2em;
   padding-top: 23px;
-  color: var(--ctaTest);
+  color: var(--elliotSecondary);
   position: relative;
-}
-
-.waveSection {
-  position: relative;
-  margin-top: 20%;
 }
 
 .introContainer {
-  margin-top: 0;
   position: relative;
-  background: var(--primaryDarkerTest);
-  padding: 50px 0 100px;
-  color: white;
-}
-
-.svgDiagonal {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
+  padding: 150px 0;
 }
 
 .introBox {
   margin: 0 auto;
   max-width: 80%;
-  padding-bottom: 150px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -121,65 +123,49 @@
   font-size: 1.8vw;
 }
 
-.waveBackground {
-  position: absolute;
-  bottom: 90%;
-  z-index: -1;
+.introPic {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position-x: center;
+  box-shadow: 0 4px 22px 0 #a6a6a6;
 }
 
 .videoSection {
-  background-color: var(--lightgreyTest);
+  background-color: var(--lightAzureBackground);
   position: relative;
   min-height: 740px;
 }
 
 .video {
-  width: 100%;
+  width: 90%;
   position: absolute;
   top: 10px;
   right: -40px;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
-  box-shadow: -8px 5px 22px 0 #b3adaa;
-  transform: perspective(1500px) rotateY(-8deg) scale(0.9);
-}
-
-.bgGrey {
-  background-color: var(--lightgreyTest);
-}
-
-.centerBox {
-  padding: 0 20px;
-  max-width: 80%;
-  margin: 0 auto;
+  box-shadow: -6px 5px 16px 0 #a6a6a6;
 }
 
 .howItWorks {
   padding-top: 100px;
   padding-bottom: 150px;
-  background-color: white;
   position: relative;
-  text-align: left;
+  text-align: center;
 }
 
-h2.howItWorksTitle {
+.howItWorksTitle {
   font-size: 2.8vw;
-  text-align: center;
 }
 
 .howItWorksDescription {
   padding-bottom: 80px;
-  text-align: center;
 }
 
 .howItWorks :global(.divider) {
   background: white;
   margin-bottom: 100px;
-}
-
-.howItWorksBg {
-  width: 100%;
-  padding-top: 150px;
 }
 
 .cardWrap {
@@ -191,13 +177,13 @@ h2.howItWorksTitle {
   margin-bottom: 20px;
 }
 
-.waterGoal {
-  /*  background-color: var(--primaryDarkerTest); */
+.newsletterSection {
+  background-color: var(--elliotSecondary);
+  color: white;
 }
 
-.newsletterSection {
-  background-color: var(--secondaryTest);
-  color: white;
+.newsletterSection :global(.divider) {
+  background: var(--elliotCta);
 }
 
 @media (min-width: 400px) {
@@ -221,6 +207,10 @@ h2.howItWorksTitle {
     font-size: 17px;
   }
 
+  .searchWrap {
+    max-width: 42em;
+  }
+
   .ctaContainer {
     margin-bottom: 14px;
     max-width: 70%;
@@ -234,16 +224,12 @@ h2.howItWorksTitle {
     margin: 44px 0 22px;
   }
 
-  .odometer {
-    font-size: 26px;
-  }
-
   .counterText {
     font-size: 16px;
   }
 
-  .searchWrap {
-    max-width: 42em;
+  .odometer {
+    font-size: 26px;
   }
 
   .cta {
