feat: Homepage redesign (#70)
* connect with contentful

* connect to contentful

* intro box and experimenting

* clean up old cards

* make 3 cards

* playing with new design

* final design, clean up colors, update contact form about us

* mobile style

* finish responsive design, adjust video, cards, intro pic

* add link to arrow down

* clean up old images

* remove page test, fix card types

* fix fonts for sections

--- a/components/Buttons/ButtonPrimary/ButtonPrimary.module.css
+++ b/components/Buttons/ButtonPrimary/ButtonPrimary.module.css
@@ -15,18 +15,11 @@
   text-transform: uppercase;
 }
 
-.big {
-  border-radius: 15px;
-}
-
 .primary:hover {
   background-position: right center;
 }
 
-.primary button {
-  color: white;
-}
-
+.primary button,
 .primary a {
   color: white;
 }
