--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -186,6 +186,19 @@
   background: var(--elliotCta);
 }
 
+.accordionWrap {
+  max-width: 1100px;
+}
+
+.accordionSection {
+  margin: 0 auto;
+  max-width: 900px;
+}
+
+.accordionImage {
+  display: none;
+}
+
 @media (min-width: 450px) {
   .sections h2 {
     font-size: 4vw;
@@ -326,6 +339,26 @@
 
   .ctaContainer {
     max-width: 55%;
+  }
+
+  .accordionSection {
+    margin: 0;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .accordionSection :global(ul) {
+    max-width: 700px;
+    width: 100%;
+  }
+
+  .accordionImage {
+    display: block;
+    background: red;
+    width: 100px;
+    height: 100px;
   }
 }
 
