--- a/components/Accordion/Accordion.module.css
+++ b/components/Accordion/Accordion.module.css
@@ -1,15 +1,16 @@
 .accordion {
   list-style: none;
+  border-bottom: 1px solid var(--elliotSecondary);
 }
 
 .accordionItem {
-  border-top: 1px solid var(--lightAzureBackground);
+  border-top: 1px solid var(--elliotSecondary);
+  padding-bottom: 8px;
 }
 
 .accordionTitle {
   font-size: 18px;
-  background-color: var(--elliotSecondary);
-  color: #fff;
+  color: var(--elliotSecondary);
   font-weight: 700;
   display: flex;
   flex-wrap: wrap;
@@ -29,10 +30,16 @@
   background-color: var(--lightGreyBackground);
   padding: 20px;
   font-size: 16px;
+  text-align: left;
 }
 
 .textWrapper {
   height: auto;
   overflow: hidden;
   transition: height ease 0.2s;
+}
+
+.button {
+  margin-top: 20px;
+  display: inline-block;
 }
