--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -186,6 +186,27 @@
   background: var(--elliotCta);
 }
 
+.accordionWrap {
+  max-width: 1100px;
+}
+
+.accordionSection {
+  margin: 0 auto;
+  max-width: 900px;
+}
+
+.accordionImage {
+  display: none;
+  width: 500px;
+  height: 500px;
+}
+
+.accordionImage img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media (min-width: 450px) {
   .sections h2 {
     font-size: 4vw;
@@ -327,6 +348,24 @@
   .ctaContainer {
     max-width: 55%;
   }
+
+  .accordionSection {
+    margin: 0;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .accordionSection :global(ul) {
+    max-width: 700px;
+    width: 100%;
+  }
+
+  .accordionImage {
+    display: block;
+    margin-right: 40px;
+  }
 }
 
 @media (min-width: 1100px) {
@@ -347,6 +386,10 @@
   .howItWorks {
     padding-top: 150px;
     padding-bottom: 200px;
+  }
+
+  .accordionImage {
+    margin-right: 60px;
   }
 }
 
