--- a/components/Accordion/Accordion.module.css
+++ b/components/Accordion/Accordion.module.css
@@ -6,6 +6,7 @@
 .accordionItem {
   border-top: 1px solid var(--elliotSecondary);
   padding-bottom: 8px;
+  text-align: left;
 }
 
 .accordionTitle {
@@ -13,7 +14,6 @@
   color: var(--elliotSecondary);
   font-weight: 700;
   display: flex;
-  flex-wrap: wrap;
   width: 100%;
   justify-content: space-between;
   align-items: center;
