--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -205,6 +205,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-left-radius: 20%;
+  border-bottom-left-radius: 20%;
 }
 
 @media (min-width: 450px) {
