--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,7 @@
   --elliotSecondary: #577399;
   --elliotTealBlue: #287896;
   --elliotCta: #ffa62b;
+  --elliotCtaHover: #d5861a;
   --elliotVisited: #7e359e;
   --elliotLinkSearch: #1a0dab;
   --dimGrey: #999;
