--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -191,6 +191,11 @@
   background: var(--elliotCta);
 }
 
+.newsletterDescription {
+  padding-bottom: 20px;
+  margin-top: -15px;
+}
+
 
 @media (min-width: 450px) {
   .sections h2 {
