--- a/components/Accordion/Accordion.module.css
+++ b/components/Accordion/Accordion.module.css
@@ -1,19 +1,19 @@
 .accordion {
   list-style: none;
-  border-bottom: 1px solid var(--elliotSecondary);
+  border-bottom: 1px solid white;
 }
 
 .accordionItem {
-  border-top: 1px solid var(--elliotSecondary);
+  border-top: 1px solid white;
   padding-bottom: 8px;
+  text-align: left;
 }
 
 .accordionTitle {
   font-size: 18px;
-  color: var(--elliotSecondary);
+  color: white;
   font-weight: 700;
   display: flex;
-  flex-wrap: wrap;
   width: 100%;
   justify-content: space-between;
   align-items: center;
@@ -27,10 +27,17 @@
 }
 
 .text {
-  background-color: var(--lightGreyBackground);
   padding: 20px;
   font-size: 16px;
   text-align: left;
+}
+
+.text p a {
+  color: var(--elliotCta);
+}
+
+.text p a:hover {
+  color: var(--elliotCtaHover);
 }
 
 .textWrapper {
@@ -40,6 +47,11 @@
 }
 
 .button {
-  margin-top: 20px;
-  display: inline-block;
+  margin-top: 40px;
+}
+
+@media (min-width: 500px) {
+  .button {
+    margin-left: calc(50% - 160px);
+  }
 }
