--- a/components/Forms/Subscribe/SubscribeForm.module.css
+++ b/components/Forms/Subscribe/SubscribeForm.module.css
@@ -23,7 +23,9 @@
   border-radius: 12px;
   border-style: hidden;
   background-color: #fff;
+  -webkit-appearance: none;
   box-shadow: -1px 1px 14px -1px rgba(1, 1, 1, 0.2);
+  -webkit-box-shadow: -1px 1px 14px -1px rgba(1, 1, 1, 0.2);
   height: 34px;
   padding: 6px 12px;
   margin-bottom: 30px;
